tests/paczka1/fuzzy1/78990613.err
Error in line 2: 0mOt17VfJt S900 77,0
Error in line 3: bsFgdabE S411 80,0
Error in line 6: Cwpy4Bgf9 S900 5,0
Error in line 15: e7wrFM88h S900 91,8
Error in line 8: Cwpy4Bgf9 A829 18,0
Error in line 25: UAuUxq S411 23,6
Error in line 31: UAuUxq A431 86,9
